--- a/css/blog.css
+++ b/css/blog.css
@@ -82,3 +82,9 @@
     margin: 2%;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .article-info {
+    word-wrap: break-word;
+  }
+}
